objects/Case_Deflection_Track__c.object
<CustomObject>
    <fields>
        <fullName>Case_Created_Count__c</fullName>
        <description>After visiting the case page the user finally created a case.</description>
        <label>Case Created Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Continue_Count__c</fullName>
        <description>This will set the count when the continue button is clicked.</description>
        <label>Continue Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Case_Click__c</fullName>
        <description>Whenever the new case  button is clicked the count will be increased.</description>
        <label>New Case Click</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_I_found_my_Answer_Count__c</fullName>
        <description>How many times a case is not created even after visiting the case page.</description>
        <label>No, I found my Answer Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Query_Name__c</fullName>
        <description>Query regarding which product.</description>
        <label>Product Query Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <description>Community User Id.</description>
        <label>User Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <description>Name of the community user.</description>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yes__c</fullName>
        <description>How many time case is created when visited the case page.</description>
        <label>Yes,Create a Case Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>This object will keep track of the community user that will tell how many times Case page is being used.
It will also track the count that how many time the user goes to the Case page and didn't create a case because it got helped from the articles show over there.</description>
    <label>Case Deflection Track</label>
    <nameField>
        <displayFormat>CDT-{00000000}</displayFormat>
        <label>Case Deflection Track Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Deflection Tracks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>